fixed margin spacing and adding className

--- a/src/PlayerLinks/style.css
+++ b/src/PlayerLinks/style.css
@@ -19,6 +19,7 @@
   border-bottom: 1px solid black;
   font-size: 24px;
   font-weight: 650;
+  margin: 3px 0;
 }
 
 #projectText, #toolsText {
@@ -34,7 +35,6 @@
 
   .toolsTitle {
     font-size: 20px;
-  
   }
 
 }
